crates/pcb-layout/tests/snapshots/layout_generation__tracks.layout.json.snap
---
source: crates/pcb-layout/tests/layout_generation.rs
expression: content
---
{
  "footprints": [
    {
      "dnp": false,
      "exclude_from_bom": false,
      "exclude_from_pos_files": false,
      "footprint": "kicad_libraries_kicad-footprints_Resistor_SMD@10.0.3:R_0603_1608Metric",
      "graphical_items": [
        {
          "angle": null,
          "end": null,
          "layer": "B.Fab",
          "position": {
            "x": 150000000,
            "y": 101490000
          },
          "shape": null,
          "start": null,
          "text": "${REFERENCE}",
          "type": "PCB_TEXT",
          "width": null
        },
        {
          "angle": null,
          "end": {
            "x": 150237258,
            "y": 100967500
          },
          "layer": "B.Silkscreen",
          "position": {
            "x": 149762742,
            "y": 100967500
          },
          "shape": 0,
          "start": {
            "x": 149762742,
            "y": 100967500
          },
          "text": null,
          "type": "PCB_SHAPE",
          "width": 120000
        },
        {
          "angle": null,
          "end": {
            "x": 150237258,
            "y": 102012500
          },
          "layer": "B.Silkscreen",
          "position": {
            "x": 149762742,
            "y": 102012500
          },
          "shape": 0,
          "start": {
            "x": 149762742,
            "y": 102012500
          },
          "text": null,
          "type": "PCB_SHAPE",
          "width": 120000
        },
        {
          "angle": null,
          "end": {
            "x": 150800000,
            "y": 101077500
          },
          "layer": "B.Fab",
          "position": {
            "x": 149200000,
            "y": 101902500
          },
          "shape": 1,
          "start": {
            "x": 149200000,
            "y": 101902500
          },
          "text": null,
          "type": "PCB_SHAPE",
          "width": 100000
        },
        {
          "angle": null,
          "end": {
            "x": 151480000,
            "y": 100760000
          },
          "layer": "B.Courtyard",
          "position": {
            "x": 148520000,
            "y": 102220000
          },
          "shape": 1,
          "start": {
            "x": 148520000,
            "y": 102220000
          },
          "text": null,
          "type": "PCB_SHAPE",
          "width": 50000
        }
      ],
      "group": "M2",
      "layer": "B.Cu",
      "locked": false,
      "orientation": 0.0,
      "pads": [
        {
          "layer": "F.Cu",
          "name": "1",
          "position": {
            "x": 149175000,
            "y": 101490000
          }
        },
        {
          "layer": "F.Cu",
          "name": "2",
          "position": {
            "x": 150825000,
            "y": 101490000
          }
        }
      ],
      "position": {
        "x": 150000000,
        "y": 101490000
      },
      "reference": "R4",
      "uuid": "c7d83793-ea87-5e0f-be4a-bb5b4ae63773",
      "value": "1k"
    },
    {
      "dnp": false,
      "exclude_from_bom": false,
      "exclude_from_pos_files": false,
      "footprint": "kicad_libraries_kicad-footprints_Resistor_SMD@10.0.3:R_0603_1608Metric",
      "graphical_items": [
        {
          "angle": null,
          "end": null,
          "layer": "B.Fab",
          "position": {
            "x": 150000000,
            "y": 105000000
          },
          "shape": null,
          "start": null,
          "text": "${REFERENCE}",
          "type": "PCB_TEXT",
          "width": null
        },
        {
          "angle": null,
          "end": {
            "x": 150237258,
            "y": 104477500
          },
          "layer": "B.Silkscreen",
          "position": {
            "x": 149762742,
            "y": 104477500
          },
          "shape": 0,
          "start": {
            "x": 149762742,
            "y": 104477500
          },
          "text": null,
          "type": "PCB_SHAPE",
          "width": 120000
        },
        {
          "angle": null,
          "end": {
            "x": 150237258,
            "y": 105522500
          },
          "layer": "B.Silkscreen",
          "position": {
            "x": 149762742,
            "y": 105522500
          },
          "shape": 0,
          "start": {
            "x": 149762742,
            "y": 105522500
          },
          "text": null,
          "type": "PCB_SHAPE",
          "width": 120000
        },
        {
          "angle": null,
          "end": {
            "x": 150800000,
            "y": 104587500
          },
          "layer": "B.Fab",
          "position": {
            "x": 149200000,
            "y": 105412500
          },
          "shape": 1,
          "start": {
            "x": 149200000,
            "y": 105412500
          },
          "text": null,
          "type": "PCB_SHAPE",
          "width": 100000
        },
        {
          "angle": null,
          "end": {
            "x": 151480000,
            "y": 104270000
          },
          "layer": "B.Courtyard",
          "position": {
            "x": 148520000,
            "y": 105730000
          },
          "shape": 1,
          "start": {
            "x": 148520000,
            "y": 105730000
          },
          "text": null,
          "type": "PCB_SHAPE",
          "width": 50000
        }
      ],
      "group": "M1",
      "layer": "B.Cu",
      "locked": false,
      "orientation": 0.0,
      "pads": [
        {
          "layer": "F.Cu",
          "name": "1",
          "position": {
            "x": 149175000,
            "y": 105000000
          }
        },
        {
          "layer": "F.Cu",
          "name": "2",
          "position": {
            "x": 150825000,
            "y": 105000000
          }
        }
      ],
      "position": {
        "x": 150000000,
        "y": 105000000
      },
      "reference": "R2",
      "uuid": "48bf6a36-b230-58e2-a5a6-54c82017a57d",
      "value": "1k"
    },
    {
      "dnp": false,
      "exclude_from_bom": false,
      "exclude_from_pos_files": false,
      "footprint": "kicad_libraries_kicad-footprints_Resistor_SMD@10.0.3:R_0603_1608Metric",
      "graphical_items": [
        {
          "angle": null,
          "end": null,
          "layer": "F.Fab",
          "position": {
            "x": 147000000,
            "y": 101490000
          },
          "shape": null,
          "start": null,
          "text": "${REFERENCE}",
          "type": "PCB_TEXT",
          "width": null
        },
        {
          "angle": null,
          "end": {
            "x": 147237258,
            "y": 100967500
          },
          "layer": "F.Silkscreen",
          "position": {
            "x": 146762742,
            "y": 100967500
          },
          "shape": 0,
          "start": {
            "x": 146762742,
            "y": 100967500
          },
          "text": null,
          "type": "PCB_SHAPE",
          "width": 120000
        },
        {
          "angle": null,
          "end": {
            "x": 147237258,
            "y": 102012500
          },
          "layer": "F.Silkscreen",
          "position": {
            "x": 146762742,
            "y": 102012500
          },
          "shape": 0,
          "start": {
            "x": 146762742,
            "y": 102012500
          },
          "text": null,
          "type": "PCB_SHAPE",
          "width": 120000
        },
        {
          "angle": null,
          "end": {
            "x": 147800000,
            "y": 101902500
          },
          "layer": "F.Fab",
          "position": {
            "x": 146200000,
            "y": 101077500
          },
          "shape": 1,
          "start": {
            "x": 146200000,
            "y": 101077500
          },
          "text": null,
          "type": "PCB_SHAPE",
          "width": 100000
        },
        {
          "angle": null,
          "end": {
            "x": 148480000,
            "y": 102220000
          },
          "layer": "F.Courtyard",
          "position": {
            "x": 145520000,
            "y": 100760000
          },
          "shape": 1,
          "start": {
            "x": 145520000,
            "y": 100760000
          },
          "text": null,
          "type": "PCB_SHAPE",
          "width": 50000
        }
      ],
      "group": "M2",
      "layer": "F.Cu",
      "locked": false,
      "orientation": 0.0,
      "pads": [
        {
          "layer": "F.Cu",
          "name": "1",
          "position": {
            "x": 146175000,
            "y": 101490000
          }
        },
        {
          "layer": "F.Cu",
          "name": "2",
          "position": {
            "x": 147825000,
            "y": 101490000
          }
        }
      ],
      "position": {
        "x": 147000000,
        "y": 101490000
      },
      "reference": "R3",
      "uuid": "a5b98fab-23af-5476-8c3f-62b0a4486620",
      "value": "1k"
    },
    {
      "dnp": false,
      "exclude_from_bom": false,
      "exclude_from_pos_files": false,
      "footprint": "kicad_libraries_kicad-footprints_Resistor_SMD@10.0.3:R_0603_1608Metric",
      "graphical_items": [
        {
          "angle": null,
          "end": null,
          "layer": "F.Fab",
          "position": {
            "x": 147000000,
            "y": 105000000
          },
          "shape": null,
          "start": null,
          "text": "${REFERENCE}",
          "type": "PCB_TEXT",
          "width": null
        },
        {
          "angle": null,
          "end": {
            "x": 147237258,
            "y": 104477500
          },
          "layer": "F.Silkscreen",
          "position": {
            "x": 146762742,
            "y": 104477500
          },
          "shape": 0,
          "start": {
            "x": 146762742,
            "y": 104477500
          },
          "text": null,
          "type": "PCB_SHAPE",
          "width": 120000
        },
        {
          "angle": null,
          "end": {
            "x": 147237258,
            "y": 105522500
          },
          "layer": "F.Silkscreen",
          "position": {
            "x": 146762742,
            "y": 105522500
          },
          "shape": 0,
          "start": {
            "x": 146762742,
            "y": 105522500
          },
          "text": null,
          "type": "PCB_SHAPE",
          "width": 120000
        },
        {
          "angle": null,
          "end": {
            "x": 147800000,
            "y": 105412500
          },
          "layer": "F.Fab",
          "position": {
            "x": 146200000,
            "y": 104587500
          },
          "shape": 1,
          "start": {
            "x": 146200000,
            "y": 104587500
          },
          "text": null,
          "type": "PCB_SHAPE",
          "width": 100000
        },
        {
          "angle": null,
          "end": {
            "x": 148480000,
            "y": 105730000
          },
          "layer": "F.Courtyard",
          "position": {
            "x": 145520000,
            "y": 104270000
          },
          "shape": 1,
          "start": {
            "x": 145520000,
            "y": 104270000
          },
          "text": null,
          "type": "PCB_SHAPE",
          "width": 50000
        }
      ],
      "group": "M1",
      "layer": "F.Cu",
      "locked": false,
      "orientation": 0.0,
      "pads": [
        {
          "layer": "F.Cu",
          "name": "1",
          "position": {
            "x": 146175000,
            "y": 105000000
          }
        },
        {
          "layer": "F.Cu",
          "name": "2",
          "position": {
            "x": 147825000,
            "y": 105000000
          }
        }
      ],
      "position": {
        "x": 147000000,
        "y": 105000000
      },
      "reference": "R1",
      "uuid": "5302dcaf-7d21-5a4d-b360-78ca6a2fd7f8",
      "value": "1k"
    }
  ],
  "groups": [
    {
      "bounding_box": {
        "bottom": 104018250,
        "left": 145245000,
        "right": 151755000,
        "top": 98961750
      },
      "drawings": [],
      "footprints": [
        "a5b98fab-23af-5476-8c3f-62b0a4486620",
        "c7d83793-ea87-5e0f-be4a-bb5b4ae63773"
      ],
      "locked": false,
      "name": "M2"
    },
    {
      "bounding_box": {
        "bottom": 107528250,
        "left": 145245000,
        "right": 151755000,
        "top": 102471750
      },
      "drawings": [],
      "footprints": [
        "48bf6a36-b230-58e2-a5a6-54c82017a57d",
        "5302dcaf-7d21-5a4d-b360-78ca6a2fd7f8"
      ],
      "locked": false,
      "name": "M1"
    }
  ],
  "tracks": [
    {
      "end": {
        "x": 146175000,
        "y": 100415000
      },
      "layer": "F.Cu",
      "locked": false,
      "net_name": "BOARD_ONE",
      "start": {
        "x": 146175000,
        "y": 101490000
      },
      "width": 200000
    },
    {
      "end": {
        "x": 146175000,
        "y": 103925000
      },
      "layer": "F.Cu",
      "locked": false,
      "net_name": "BOARD_ONE",
      "start": {
        "x": 146175000,
        "y": 105000000
      },
      "width": 200000
    },
    {
      "end": {
        "x": 146600000,
        "y": 103500000
      },
      "layer": "F.Cu",
      "locked": false,
      "net_name": "BOARD_ONE",
      "start": {
        "x": 146175000,
        "y": 103925000
      },
      "width": 200000
    },
    {
      "end": {
        "x": 146600000,
        "y": 99990000
      },
      "layer": "F.Cu",
      "locked": false,
      "net_name": "BOARD_ONE",
      "start": {
        "x": 146175000,
        "y": 100415000
      },
      "width": 200000
    },
    {
      "end": {
        "x": 147600000,
        "y": 103500000
      },
      "layer": "B.Cu",
      "locked": false,
      "net_name": "BOARD_ONE",
      "start": {
        "x": 148700000,
        "y": 103500000
      },
      "width": 200000
    },
    {
      "end": {
        "x": 147600000,
        "y": 103500000
      },
      "layer": "F.Cu",
      "locked": false,
      "net_name": "BOARD_ONE",
      "start": {
        "x": 146600000,
        "y": 103500000
      },
      "width": 200000
    },
    {
      "end": {
        "x": 147600000,
        "y": 99990000
      },
      "layer": "B.Cu",
      "locked": false,
      "net_name": "BOARD_ONE",
      "start": {
        "x": 148700000,
        "y": 99990000
      },
      "width": 200000
    },
    {
      "end": {
        "x": 147600000,
        "y": 99990000
      },
      "layer": "F.Cu",
      "locked": false,
      "net_name": "BOARD_ONE",
      "start": {
        "x": 146600000,
        "y": 99990000
      },
      "width": 200000
    },
    {
      "end": {
        "x": 147825000,
        "y": 102515000
      },
      "layer": "F.Cu",
      "locked": false,
      "net_name": "BOARD_TWO",
      "start": {
        "x": 147825000,
        "y": 101490000
      },
      "width": 200000
    },
    {
      "end": {
        "x": 147825000,
        "y": 106025000
      },
      "layer": "F.Cu",
      "locked": false,
      "net_name": "BOARD_TWO",
      "start": {
        "x": 147825000,
        "y": 105000000
      },
      "width": 200000
    },
    {
      "end": {
        "x": 148200000,
        "y": 102890000
      },
      "layer": "F.Cu",
      "locked": false,
      "net_name": "BOARD_TWO",
      "start": {
        "x": 147825000,
        "y": 102515000
      },
      "width": 200000
    },
    {
      "end": {
        "x": 148200000,
        "y": 106400000
      },
      "layer": "F.Cu",
      "locked": false,
      "net_name": "BOARD_TWO",
      "start": {
        "x": 147825000,
        "y": 106025000
      },
      "width": 200000
    },
    {
      "end": {
        "x": 148700000,
        "y": 103500000
      },
      "layer": "B.Cu",
      "locked": false,
      "net_name": "BOARD_ONE",
      "start": {
        "x": 149175000,
        "y": 103975000
      },
      "width": 200000
    },
    {
      "end": {
        "x": 148700000,
        "y": 99990000
      },
      "layer": "B.Cu",
      "locked": false,
      "net_name": "BOARD_ONE",
      "start": {
        "x": 149175000,
        "y": 100465000
      },
      "width": 200000
    },
    {
      "end": {
        "x": 149175000,
        "y": 100465000
      },
      "layer": "B.Cu",
      "locked": false,
      "net_name": "BOARD_ONE",
      "start": {
        "x": 149175000,
        "y": 101490000
      },
      "width": 200000
    },
    {
      "end": {
        "x": 149175000,
        "y": 103975000
      },
      "layer": "B.Cu",
      "locked": false,
      "net_name": "BOARD_ONE",
      "start": {
        "x": 149175000,
        "y": 105000000
      },
      "width": 200000
    },
    {
      "end": {
        "x": 149400000,
        "y": 102890000
      },
      "layer": "B.Cu",
      "locked": false,
      "net_name": "BOARD_TWO",
      "start": {
        "x": 150400000,
        "y": 102890000
      },
      "width": 200000
    },
    {
      "end": {
        "x": 149400000,
        "y": 102890000
      },
      "layer": "F.Cu",
      "locked": false,
      "net_name": "BOARD_TWO",
      "start": {
        "x": 148200000,
        "y": 102890000
      },
      "width": 200000
    },
    {
      "end": {
        "x": 149400000,
        "y": 106400000
      },
      "layer": "B.Cu",
      "locked": false,
      "net_name": "BOARD_TWO",
      "start": {
        "x": 150400000,
        "y": 106400000
      },
      "width": 200000
    },
    {
      "end": {
        "x": 149400000,
        "y": 106400000
      },
      "layer": "F.Cu",
      "locked": false,
      "net_name": "BOARD_TWO",
      "start": {
        "x": 148200000,
        "y": 106400000
      },
      "width": 200000
    },
    {
      "end": {
        "x": 150400000,
        "y": 102890000
      },
      "layer": "B.Cu",
      "locked": false,
      "net_name": "BOARD_TWO",
      "start": {
        "x": 150825000,
        "y": 102465000
      },
      "width": 200000
    },
    {
      "end": {
        "x": 150400000,
        "y": 106400000
      },
      "layer": "B.Cu",
      "locked": false,
      "net_name": "BOARD_TWO",
      "start": {
        "x": 150825000,
        "y": 105975000
      },
      "width": 200000
    },
    {
      "end": {
        "x": 150825000,
        "y": 102465000
      },
      "layer": "B.Cu",
      "locked": false,
      "net_name": "BOARD_TWO",
      "start": {
        "x": 150825000,
        "y": 101490000
      },
      "width": 200000
    },
    {
      "end": {
        "x": 150825000,
        "y": 105975000
      },
      "layer": "B.Cu",
      "locked": false,
      "net_name": "BOARD_TWO",
      "start": {
        "x": 150825000,
        "y": 105000000
      },
      "width": 200000
    }
  ],
  "vias": [
    {
      "diameter": 600000,
      "drill": 300000,
      "locked": false,
      "net_name": "BOARD_ONE",
      "position": {
        "x": 147600000,
        "y": 103500000
      },
      "via_type": "through"
    },
    {
      "diameter": 600000,
      "drill": 300000,
      "locked": false,
      "net_name": "BOARD_ONE",
      "position": {
        "x": 147600000,
        "y": 99990000
      },
      "via_type": "through"
    },
    {
      "diameter": 600000,
      "drill": 300000,
      "locked": false,
      "net_name": "BOARD_TWO",
      "position": {
        "x": 149400000,
        "y": 102890000
      },
      "via_type": "through"
    },
    {
      "diameter": 600000,
      "drill": 300000,
      "locked": false,
      "net_name": "BOARD_TWO",
      "position": {
        "x": 149400000,
        "y": 106400000
      },
      "via_type": "through"
    }
  ],
  "zones": []
}
