crates/pcb-layout/tests/snapshots/layout_generation__zones.layout.json.snap
---
source: crates/pcb-layout/tests/layout_generation.rs
expression: content
---
{
  "footprints": [
    {
      "dnp": false,
      "exclude_from_bom": false,
      "exclude_from_pos_files": false,
      "footprint": "kicad_libraries_kicad-footprints_Resistor_SMD@10.0.3:R_0603_1608Metric",
      "graphical_items": [
        {
          "angle": null,
          "end": null,
          "layer": "F.Fab",
          "position": {
            "x": 147000000,
            "y": 105000000
          },
          "shape": null,
          "start": null,
          "text": "${REFERENCE}",
          "type": "PCB_TEXT",
          "width": null
        },
        {
          "angle": null,
          "end": {
            "x": 147237258,
            "y": 104477500
          },
          "layer": "F.Silkscreen",
          "position": {
            "x": 146762742,
            "y": 104477500
          },
          "shape": 0,
          "start": {
            "x": 146762742,
            "y": 104477500
          },
          "text": null,
          "type": "PCB_SHAPE",
          "width": 120000
        },
        {
          "angle": null,
          "end": {
            "x": 147237258,
            "y": 105522500
          },
          "layer": "F.Silkscreen",
          "position": {
            "x": 146762742,
            "y": 105522500
          },
          "shape": 0,
          "start": {
            "x": 146762742,
            "y": 105522500
          },
          "text": null,
          "type": "PCB_SHAPE",
          "width": 120000
        },
        {
          "angle": null,
          "end": {
            "x": 147800000,
            "y": 105412500
          },
          "layer": "F.Fab",
          "position": {
            "x": 146200000,
            "y": 104587500
          },
          "shape": 1,
          "start": {
            "x": 146200000,
            "y": 104587500
          },
          "text": null,
          "type": "PCB_SHAPE",
          "width": 100000
        },
        {
          "angle": null,
          "end": {
            "x": 148480000,
            "y": 105730000
          },
          "layer": "F.Courtyard",
          "position": {
            "x": 145520000,
            "y": 104270000
          },
          "shape": 1,
          "start": {
            "x": 145520000,
            "y": 104270000
          },
          "text": null,
          "type": "PCB_SHAPE",
          "width": 50000
        }
      ],
      "group": "MyModule",
      "layer": "F.Cu",
      "locked": false,
      "orientation": 0.0,
      "pads": [
        {
          "layer": "F.Cu",
          "name": "1",
          "position": {
            "x": 146175000,
            "y": 105000000
          }
        },
        {
          "layer": "F.Cu",
          "name": "2",
          "position": {
            "x": 147825000,
            "y": 105000000
          }
        }
      ],
      "position": {
        "x": 147000000,
        "y": 105000000
      },
      "reference": "R1",
      "uuid": "c28e397c-068f-513d-9cce-7ba0992086d6",
      "value": "1k"
    },
    {
      "dnp": false,
      "exclude_from_bom": false,
      "exclude_from_pos_files": false,
      "footprint": "kicad_libraries_kicad-footprints_Resistor_SMD@10.0.3:R_0603_1608Metric",
      "graphical_items": [
        {
          "angle": null,
          "end": null,
          "layer": "F.Fab",
          "position": {
            "x": 150000000,
            "y": 105000000
          },
          "shape": null,
          "start": null,
          "text": "${REFERENCE}",
          "type": "PCB_TEXT",
          "width": null
        },
        {
          "angle": null,
          "end": {
            "x": 150237258,
            "y": 104477500
          },
          "layer": "F.Silkscreen",
          "position": {
            "x": 149762742,
            "y": 104477500
          },
          "shape": 0,
          "start": {
            "x": 149762742,
            "y": 104477500
          },
          "text": null,
          "type": "PCB_SHAPE",
          "width": 120000
        },
        {
          "angle": null,
          "end": {
            "x": 150237258,
            "y": 105522500
          },
          "layer": "F.Silkscreen",
          "position": {
            "x": 149762742,
            "y": 105522500
          },
          "shape": 0,
          "start": {
            "x": 149762742,
            "y": 105522500
          },
          "text": null,
          "type": "PCB_SHAPE",
          "width": 120000
        },
        {
          "angle": null,
          "end": {
            "x": 150800000,
            "y": 105412500
          },
          "layer": "F.Fab",
          "position": {
            "x": 149200000,
            "y": 104587500
          },
          "shape": 1,
          "start": {
            "x": 149200000,
            "y": 104587500
          },
          "text": null,
          "type": "PCB_SHAPE",
          "width": 100000
        },
        {
          "angle": null,
          "end": {
            "x": 151480000,
            "y": 105730000
          },
          "layer": "F.Courtyard",
          "position": {
            "x": 148520000,
            "y": 104270000
          },
          "shape": 1,
          "start": {
            "x": 148520000,
            "y": 104270000
          },
          "text": null,
          "type": "PCB_SHAPE",
          "width": 50000
        }
      ],
      "group": "MyModule",
      "layer": "F.Cu",
      "locked": false,
      "orientation": 0.0,
      "pads": [
        {
          "layer": "F.Cu",
          "name": "1",
          "position": {
            "x": 149175000,
            "y": 105000000
          }
        },
        {
          "layer": "F.Cu",
          "name": "2",
          "position": {
            "x": 150825000,
            "y": 105000000
          }
        }
      ],
      "position": {
        "x": 150000000,
        "y": 105000000
      },
      "reference": "R2",
      "uuid": "fdb381d8-edf9-5208-849a-10b220c35fdd",
      "value": "1k"
    }
  ],
  "groups": [
    {
      "bounding_box": {
        "bottom": 106005000,
        "left": 145245000,
        "right": 151755000,
        "top": 102471750
      },
      "drawings": [],
      "footprints": [
        "c28e397c-068f-513d-9cce-7ba0992086d6",
        "fdb381d8-edf9-5208-849a-10b220c35fdd"
      ],
      "locked": false,
      "name": "MyModule"
    }
  ],
  "tracks": [],
  "vias": [],
  "zones": [
    {
      "filled": true,
      "hatch_style": 2,
      "layer": "F.Cu",
      "locked": false,
      "min_thickness": 250000,
      "name": "",
      "net_name": "BOARD_ONE",
      "points": [
        {
          "x": 147000000,
          "y": 103750000
        },
        {
          "x": 147000000,
          "y": 105000000
        },
        {
          "x": 150000000,
          "y": 103750000
        },
        {
          "x": 150000000,
          "y": 105000000
        }
      ],
      "priority": 1
    }
  ]
}
